openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: h-project
  labels:
    app: h-project
spec:
  to:
    kind: Service
    name: h-project
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
